--- a/src/Arcanum.UI/Components/UserControls/BaseControls/FloatNumericUpDown.xaml
+++ b/src/Arcanum.UI/Components/UserControls/BaseControls/FloatNumericUpDown.xaml
@@ -2,9 +2,7 @@
              xmlns = "http://schemas.microsoft.com/winfx/2006/xaml/presentation"
              xmlns:x = "http://schemas.microsoft.com/winfx/2006/xaml"
              xmlns:mc = "http://schemas.openxmlformats.org/markup-compatibility/2006"
-             xmlns:d = "http://schemas.microsoft.com/expression/blend/2008"
-             mc:Ignorable = "d"
-             d:DesignHeight = "300"
+             xmlns:d = "http://schemas.microsoft.com/expression/blend/2008" mc:Ignorable = "d" d:DesignHeight = "300"
              d:DesignWidth = "300">
 
     <UserControl.Resources>
@@ -17,22 +15,23 @@
     </UserControl.Resources>
 
 
-    <Border CornerRadius = "2"
-            Background = "Transparent">
+    <Border CornerRadius = "2" Background = "Transparent">
 
         <Border.Style>
             <Style TargetType = "Border">
                 <Setter Property = "BorderBrush"
-                        Value = "{Binding InnerBorderBrush, RelativeSource={RelativeSource AncestorType=UserControl}}" />
+                        Value = "{Binding InnerBorderBrush, 
+                        RelativeSource={RelativeSource AncestorType=UserControl}, 
+                        TargetNullValue={StaticResource DefaultBorderColorBrush}}" />
+
                 <Setter Property = "BorderThickness"
-                        Value = "{Binding InnerBorderThickness, RelativeSource={RelativeSource AncestorType=UserControl}}" />
+                        Value = "{Binding InnerBorderThickness, 
+                        RelativeSource={RelativeSource AncestorType=UserControl}}" />
+
                 <Style.Triggers>
-                    <DataTrigger Binding = "{Binding IsFocused, ElementName=NudTextBox}"
-                                 Value = "True">
-                        <Setter Property = "BorderBrush"
-                                Value = "{StaticResource BlueAccentColorBrush}" />
-                        <Setter Property = "BorderThickness"
-                                Value = "1" />
+                    <DataTrigger Binding = "{Binding IsFocused, ElementName=NudTextBox}" Value = "True">
+                        <Setter Property = "BorderBrush" Value = "{StaticResource BlueAccentColorBrush}" />
+                        <Setter Property = "BorderThickness" Value = "1" />
                     </DataTrigger>
                 </Style.Triggers>
             </Style>
@@ -48,69 +47,39 @@
                 <RowDefinition Height = "10" />
                 <RowDefinition Height = "10" />
             </Grid.RowDefinitions>
-            <TextBox Name = "NudTextBox"
-                     Grid.Column = "0"
-                     Grid.Row = "0"
-                     Grid.RowSpan = "2"
-                     TextAlignment = "Left"
-                     TextChanged = "NUDTextBox_TextChanged"
-                     PreviewTextInput = "NudTextBox_PreviewTextInput"
-                     MouseWheel = "NudTextBox_MouseWheel"
-                     GotKeyboardFocus = "NudTextBox_GotKeyboardFocus"
+            <TextBox Name = "NudTextBox" Grid.Column = "0" Grid.Row = "0" Grid.RowSpan = "2" TextAlignment = "Left"
+                     TextChanged = "NUDTextBox_TextChanged" PreviewTextInput = "NudTextBox_PreviewTextInput"
+                     MouseWheel = "NudTextBox_MouseWheel" GotKeyboardFocus = "NudTextBox_GotKeyboardFocus"
                      Foreground = "{StaticResource DefaultForeColorBrush}"
                      FontFamily = "{Binding FontFamily, RelativeSource={RelativeSource AncestorType=UserControl}}"
-                     FontSize = "{StaticResource DefaultFontSize}"
-                     FontWeight = "{StaticResource DefaultFontWeight}"
-                     CaretBrush = "{StaticResource DefaultForeColorBrush}"
-                     Background = "Transparent"
-                     BorderThickness = "0"
-                     VerticalAlignment = "Stretch"
-                     HorizontalAlignment = "Stretch"
-                     VerticalContentAlignment = "Center"
-                     VerticalScrollBarVisibility = "Disabled"
-                     TextWrapping = "NoWrap"
-                     Margin = "1"
-                     Padding = "0">
+                     FontSize = "{StaticResource DefaultFontSize}" FontWeight = "{StaticResource DefaultFontWeight}"
+                     CaretBrush = "{StaticResource DefaultForeColorBrush}" Background = "Transparent"
+                     BorderThickness = "0" VerticalAlignment = "Stretch" HorizontalAlignment = "Stretch"
+                     VerticalContentAlignment = "Center" VerticalScrollBarVisibility = "Disabled"
+                     TextWrapping = "NoWrap" Margin = "1" Padding = "0">
 
             </TextBox>
 
-            <Rectangle Grid.Column = "1"
-                       Grid.Row = "0"
-                       Grid.RowSpan = "2"
-                       Width = "1"
-                       Fill = "{StaticResource LightBackColorBrush}"
-                       Margin = "1, 3"
-                       HorizontalAlignment = "Stretch"
+            <Rectangle Grid.Column = "1" Grid.Row = "0" Grid.RowSpan = "2" Width = "1"
+                       Fill = "{StaticResource LightBackColorBrush}" Margin = "1, 3" HorizontalAlignment = "Stretch"
                        VerticalAlignment = "Stretch" />
 
-            <RepeatButton Name = "NudButtonUp"
-                          Grid.Column = "2"
-                          Grid.Row = "0"
-                          BorderThickness = "0"
-                          Background = "Transparent"
-                          Padding = "0"
-                          Margin = "0, 2, 0, 0"
-                          HorizontalAlignment = "Stretch"
-                          VerticalAlignment = "Stretch"
-                          Click = "NUDButtonUP_Click">
+            <RepeatButton Name = "NudButtonUp" Grid.Column = "2" Grid.Row = "0" BorderThickness = "0"
+                          Background = "Transparent" Padding = "0" Margin = "0, 2, 0, 0"
+                          HorizontalAlignment = "Stretch" VerticalAlignment = "Stretch" Click = "NUDButtonUP_Click">
                 <RepeatButton.Style>
                     <Style TargetType = "RepeatButton">
-                        <Setter Property = "Background"
-                                Value = "Transparent" />
+                        <Setter Property = "Background" Value = "Transparent" />
                         <Setter Property = "Template">
                             <Setter.Value>
                                 <ControlTemplate TargetType = "RepeatButton">
-                                    <Border x:Name = "border"
-                                            Background = "{TemplateBinding Background}"
+                                    <Border x:Name = "border" Background = "{TemplateBinding Background}"
                                             CornerRadius = "2">
-                                        <ContentPresenter HorizontalAlignment = "Center"
-                                                          VerticalAlignment = "Center" />
+                                        <ContentPresenter HorizontalAlignment = "Center" VerticalAlignment = "Center" />
                                     </Border>
                                     <ControlTemplate.Triggers>
-                                        <Trigger Property = "IsMouseOver"
-                                                 Value = "True">
-                                            <Setter TargetName = "border"
-                                                    Property = "Background"
+                                        <Trigger Property = "IsMouseOver" Value = "True">
+                                            <Setter TargetName = "border" Property = "Background"
                                                     Value = "{StaticResource LightBackColorBrush}" />
                                         </Trigger>
 
@@ -123,35 +92,23 @@
 
                 <Image Source = "/Arcanum_UI;component/Assets/Icons/Tiny/ArrowUp.png" />
             </RepeatButton>
-            <RepeatButton Name = "NudButtonDown"
-                          Grid.Column = "2"
-                          Grid.Row = "1"
-                          BorderThickness = "0"
-                          Background = "Transparent"
-                          Padding = "0"
-                          Margin = "0, 0, 0, 2"
-                          HorizontalAlignment = "Stretch"
-                          VerticalAlignment = "Stretch"
-                          Click = "NUDButtonDown_Click">
+            <RepeatButton Name = "NudButtonDown" Grid.Column = "2" Grid.Row = "1" BorderThickness = "0"
+                          Background = "Transparent" Padding = "0" Margin = "0, 0, 0, 2"
+                          HorizontalAlignment = "Stretch" VerticalAlignment = "Stretch" Click = "NUDButtonDown_Click">
 
                 <RepeatButton.Style>
                     <Style TargetType = "RepeatButton">
-                        <Setter Property = "Background"
-                                Value = "Transparent" />
+                        <Setter Property = "Background" Value = "Transparent" />
                         <Setter Property = "Template">
                             <Setter.Value>
                                 <ControlTemplate TargetType = "RepeatButton">
-                                    <Border x:Name = "border"
-                                            Background = "{TemplateBinding Background}"
+                                    <Border x:Name = "border" Background = "{TemplateBinding Background}"
                                             CornerRadius = "2">
-                                        <ContentPresenter HorizontalAlignment = "Center"
-                                                          VerticalAlignment = "Center" />
+                                        <ContentPresenter HorizontalAlignment = "Center" VerticalAlignment = "Center" />
                                     </Border>
                                     <ControlTemplate.Triggers>
-                                        <Trigger Property = "IsMouseOver"
-                                                 Value = "True">
-                                            <Setter TargetName = "border"
-                                                    Property = "Background"
+                                        <Trigger Property = "IsMouseOver" Value = "True">
+                                            <Setter TargetName = "border" Property = "Background"
                                                     Value = "{StaticResource LightBackColorBrush}" />
                                         </Trigger>
                                     </ControlTemplate.Triggers>
