--- a/src/Arcanum.UI/Components/UserControls/Map/MapControl.xaml
+++ b/src/Arcanum.UI/Components/UserControls/Map/MapControl.xaml
@@ -1,10 +1,8 @@
-﻿<UserControl x:Class = "Arcanum.UI.Components.UserControls.MapControl"
+﻿<UserControl x:Class = "Arcanum.UI.Components.UserControls.Map.MapControl"
              xmlns = "http://schemas.microsoft.com/winfx/2006/xaml/presentation"
              xmlns:x = "http://schemas.microsoft.com/winfx/2006/xaml"
              xmlns:mc = "http://schemas.openxmlformats.org/markup-compatibility/2006"
-             xmlns:d = "http://schemas.microsoft.com/expression/blend/2008"
-             mc:Ignorable = "d"
-             d:DesignHeight = "300"
+             xmlns:d = "http://schemas.microsoft.com/expression/blend/2008" mc:Ignorable = "d" d:DesignHeight = "300"
              d:DesignWidth = "300">
 
     <UserControl.Resources>
@@ -17,11 +15,9 @@
     </UserControl.Resources>
     <Grid>
         <!-- Main Rendering Container -->
-        <Border x:Name = "HwndHostContainer"
-                Background = "{StaticResource DefaultBackColorBrush}"
-                BorderBrush = "{StaticResource DefaultBorderColorBrush}"
-                BorderThickness = "0"
-                Margin = "0">
+        <Border x:Name = "HwndHostContainer" Background = "{StaticResource DefaultBackColorBrush}"
+                BorderBrush = "{StaticResource DefaultBorderColorBrush}" BorderThickness = "0" Margin = "0"
+                ContextMenuOpening = "Border_ContextMenuOpening">
             <!-- D3D11HwndHost will be added here from code-behind -->
             <Border.ContextMenu>
                 <ContextMenu>
@@ -34,28 +30,18 @@
             </Border.ContextMenu>
         </Border>
 
-        <StackPanel x:Name = "LoadingPanel"
-                    HorizontalAlignment = "Center"
-                    VerticalAlignment = "Center">
-            <TextBlock Text = "Loading map..."
-                       Foreground = "{StaticResource GreyedOutForeColorBrush}"
-                       FontSize = "26"
-                       FontWeight = "SemiBold"
-                       HorizontalAlignment = "Center" />
-            <Path Stroke = "{StaticResource LightAccentBackColorBrush}"
-                  StrokeThickness = "5"
-                  HorizontalAlignment = "Center"
-                  VerticalAlignment = "Center"
-                  Margin = "40"
+        <StackPanel x:Name = "LoadingPanel" HorizontalAlignment = "Center" VerticalAlignment = "Center">
+            <TextBlock Text = "Loading map..." Foreground = "{StaticResource GreyedOutForeColorBrush}" FontSize = "26"
+                       FontWeight = "SemiBold" HorizontalAlignment = "Center" />
+            <Path Stroke = "{StaticResource LightAccentBackColorBrush}" StrokeThickness = "5"
+                  HorizontalAlignment = "Center" VerticalAlignment = "Center" Margin = "40"
                   RenderTransformOrigin = "0,0">
                 <Path.Data>
                     <PathGeometry>
                         <!-- Start the arc at the top-center point -->
                         <PathFigure StartPoint = "22.5,22.5">
                             <!-- The ArcSegment defines the curve -->
-                            <ArcSegment Point = "42.5,2.5"
-                                        Size = "20,20"
-                                        IsLargeArc = "True"
+                            <ArcSegment Point = "42.5,2.5" Size = "20,20" IsLargeArc = "True"
                                         SweepDirection = "Clockwise" />
                         </PathFigure>
                     </PathGeometry>
@@ -63,22 +49,15 @@
 
                 <!-- This transform will be animated to create the rotation -->
                 <Path.RenderTransform>
-                    <RotateTransform x:Name = "Rotation"
-                                     Angle = "0"
-                                     CenterX = "22.5"
-                                     CenterY = "2.5" />
+                    <RotateTransform x:Name = "Rotation" Angle = "0" CenterX = "22.5" CenterY = "2.5" />
                 </Path.RenderTransform>
 
                 <Path.Triggers>
                     <EventTrigger RoutedEvent = "Loaded">
                         <BeginStoryboard>
                             <Storyboard>
-                                <DoubleAnimation Storyboard.TargetName = "Rotation"
-                                                 Storyboard.TargetProperty = "Angle"
-                                                 From = "0"
-                                                 To = "360"
-                                                 Duration = "0:0:2"
-                                                 RepeatBehavior = "Forever" />
+                                <DoubleAnimation Storyboard.TargetName = "Rotation" Storyboard.TargetProperty = "Angle"
+                                                 From = "0" To = "360" Duration = "0:0:2" RepeatBehavior = "Forever" />
                             </Storyboard>
                         </BeginStoryboard>
                     </EventTrigger>
