--- a/src/Arcanum.UI/Components/UserControls/ValueAllocators/PopsEditor.xaml
+++ b/src/Arcanum.UI/Components/UserControls/ValueAllocators/PopsEditor.xaml
@@ -173,6 +173,7 @@
                 <RowDefinition Height = "Auto" />
                 <RowDefinition Height = "Auto" />
                 <RowDefinition Height = "Auto" />
+                <RowDefinition Height = "Auto" />
                 <RowDefinition Height = "*" />
             </Grid.RowDefinitions>
 
@@ -620,8 +621,32 @@
                 </StackPanel>
             </Grid>
 
-            <!-- Calculated Values Info -->
             <Grid Grid.Row = "7">
+                <Grid.RowDefinitions>
+                    <RowDefinition Height = "Auto" />
+                    <RowDefinition Height = "Auto" />
+                </Grid.RowDefinitions>
+
+                <!-- Separator Line -->
+                <Rectangle Grid.Row = "0" Grid.ColumnSpan = "2" Height = "1"
+                           Fill = "{StaticResource DefaultBorderColorBrush}" Margin = "0,2,0,10" />
+
+                <DockPanel Grid.Row = "1" LastChildFill = "False" Margin = "0, 0, 0, 3">
+                    <TextBlock DockPanel.Dock = "Left" Text = "Paste from location:" HorizontalAlignment = "Left"
+                               VerticalAlignment = "Center" />
+
+                    <styleClasses:BaseButton DockPanel.Dock = "Left" Content = "📋" Width = "91" Height = "24"
+                                             Command = "{Binding PasteFromLocationCommand}"
+                                             HorizontalAlignment = "Right" Margin = "15,0,0,0"
+                                             local:InteractionMonitor.AllocatorVm = "{Binding}"
+                                             Style = "{StaticResource ThinBaseButtonStyle}"
+                                             ToolTip = "Fetch Pop composition from another location and append it here." />
+                </DockPanel>
+
+            </Grid>
+
+            <!-- Calculated Values Info -->
+            <Grid Grid.Row = "8">
                 <Grid.RowDefinitions>
                     <RowDefinition Height = "Auto" />
                     <RowDefinition Height = "Auto" />
@@ -655,7 +680,7 @@
             </Grid>
 
             <!-- Apply Changes Button -->
-            <styleClasses:BaseButton Grid.Row = "8" Content = "Apply Changes" Command = "{Binding ApplyChangesCommand}"
+            <styleClasses:BaseButton Grid.Row = "9" Content = "Apply Changes" Command = "{Binding ApplyChangesCommand}"
                                      HorizontalAlignment = "Right" Width = "100" Margin = "0,10,0,0"
                                      local:InteractionMonitor.AllocatorVm = "{Binding}"
                                      Style = "{StaticResource ThinBaseButtonStyle}" />
